src/components/MuseumCard.css
.museum-card {
  min-height: 100vh;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(2, 1fr);
  color: white;
}

/* for the title and description text */
.museum-card-text-container {
  width: 100%;
  justify-self: center;
}

.museum-card-title {
  width: 88%;
  margin-top: 1.5em;
  padding-bottom: 0.3em;
  font-variant-caps: all-small-caps;
  font-weight: 400;
  font-size: 35px;
  letter-spacing: 0.5px;
}

/* for the museums image */
.museum-card-img-container {
  width: 100%;
  justify-self: center;
  grid-column: 1;
}

#museum-card-img {
  margin-top: 4em;
  min-height: 75%;
  min-width: 75%;
  max-width: 75%;
  height: auto;
}

/* for the museums featured exhibitions */
.museum-card-exhibitions-container {
  width: 100%;
  padding-top: 2em;
  grid-column: 1 / span 2;
  justify-self: center;
}

.museum-card-exhibitions-container>h1{
  font-variant-caps: all-small-caps;
  font-weight: 400;
  font-size: 35px;
  letter-spacing: 0.5px;
}

.museum-card:nth-child(even)>.museum-card-exhibitions-container>.museum-card-exhibitions{
  margin-left: 4em;
}

.museum-card-exhibitions {
  width: 90%;
  border-top: 1px solid rgba(255, 255, 255, 0.3);
  margin-left: 3em;
  padding-top: 1em;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  column-gap: 2em;
  font-weight: 200;
  font-style: italic;
  letter-spacing: 0.5px;
}

.museum-card-description {
  width: 88%;
  border-top: 1px solid rgba(255, 255, 255, 0.3);
  padding-top: 0.8em;
  font-weight: 200;
  font-style: italic;
  letter-spacing: 0.5px;
}

.museum-card-exhibitions-container > h1 {
  padding-bottom: 0.5em;
  margin-left: 1.5em;
  font-variant-caps: all-small-caps;
  font-weight: 400;
  font-size: 35px;
}

.museum-card-exhibitions > div > img {
  object-fit: fill;
  width: 150px;
  height: 150px;
}

.exhibition-name {
  overflow-wrap: normal;
  width: 150px;
  height: 7vh;
  font-weight: 400;
  font-size: 20px;
  font-style: normal;
  text-align: center;
  margin-bottom: 0;
}

/* Styling for the odd numbered museum cards and their content (indexing starts at 1) */
.museum-card:nth-child(odd) {
  background-color: rgb(82, 82, 82);
}

.museum-card:nth-child(odd) > .museum-card-img-container > #museum-card-img {
  margin-left: 3em;
}

/* Styling for the even numbered museum cards and their content (indexing starts at 1) */
.museum-card:nth-child(even) {
  background-color: rgb(49, 49, 49);
}

.museum-card:nth-child(even) > .museum-card-text-container {
  grid-row: 1;
  grid-column: 1;
}

.museum-card:nth-child(even)
  > .museum-card-text-container
  > .museum-card-title {
  margin-left: 1.5em;
}

.museum-card:nth-child(even)
  > .museum-card-text-container
  > .museum-card-description {
  margin-left: 3.7em;
  font-weight: 200;
  font-style: italic;
  letter-spacing: 0.5px;
}

.museum-card:nth-child(even) > .museum-card-img-container {
  grid-column: 2;
}

.museum-card:nth-child(even) > .museum-card-img-container > #museum-card-img {
  margin-left: 6em;
}

@media screen and (max-width: 1000px) {
  .museum-card-exhibitions {
    margin-left: 2em;
    width: 92%;
  }

  .museum-card-exhibitions-container > h1 {
    margin-left: 1em;
  }

  .museum-card:nth-child(odd) > .museum-card-img-container > #museum-card-img {
    margin-left: 2em;
  }

  .museum-card:nth-child(even)
    > .museum-card-text-container
    > .museum-card-title {
    margin-left: 1em;
  }

  .museum-card:nth-child(even)
    > .museum-card-text-container
    > .museum-card-description {
    margin-left: 2.4em;
  }

  .museum-card:nth-child(even) > .museum-card-img-container > #museum-card-img {
    margin-left: 3em;
  }
}

@media screen and (min-width: 441px) and (max-width: 560px) {
  .museum-card {
    display: flex;
    flex-direction: column;
    min-height: 90vh;
  }

  #museum-card-img {
    margin-top: 2em;
    min-height: 200px;
    min-width: 88%;
    max-width: 88%;
  }

  .museum-card-title {
    padding-bottom: 0.1em;
    margin-top: 1em;
    margin-left: 1em;
  }

  .museum-card-description {
    padding-top: 0.5em;
    margin-left: 2.4em;
  }

  .museum-card-exhibitions-container {
    margin-top: 0;
  }

  .museum-card-exhibitions {
    width: 88%;
  }

  #exhibition-item-four {
    display: none;
  }

  .museum-card:nth-child(even) > .museum-card-img-container > #museum-card-img {
    margin-left: 2em;
  }
}

@media screen and (max-width: 440px) {
  .museum-card {
    display: flex;
    flex-direction: column;
    min-height: 90vh;
  }

  .museum-card-title {
    padding-bottom: 0.1em;
    margin-top: 1em;
    margin-left: 0.8em;
  }

  .museum-card-description {
    padding-top: 0.5em;
    margin-left: 2em;
  }

  #museum-card-img {
    margin-top: 2em;
    min-height: 200px;
    min-width: 88%;
    max-width: 88%;
  }

  .museum-card-exhibitions {
    width: 88%;
    margin-left: 1.5em;
  }

  .museum-card-exhibitions-container > h1 {
    margin-left: 0.8em;
    padding-bottom: 0.2em;
  }

  #exhibition-item-four {
    display: none;
  }

  .museum-card:nth-child(even) > .museum-card-img-container > #museum-card-img {
    margin-left: 2em;
  }

  .museum-card:nth-child(even)
    > .museum-card-text-container
    > .museum-card-title {
    margin-left: 0.8em;
  }

  .museum-card:nth-child(even)
    > .museum-card-text-container
    > .museum-card-description {
    margin-left: 2em;
  }
}

@media screen and (max-width: 400px) {
  .exhibition-name {
    font-size: large;
  }

  .museum-card:nth-child(odd) > .museum-card-img-container > #museum-card-img {
    margin-left: 1.5em;
  }

  .museum-card:nth-child(even) > .museum-card-img-container > #museum-card-img {
    margin-left: 1.5em;
  }
}

